--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "next": "13.5.6",
+    "nextjs-toploader": "^1.6.12",
     "react": "^18",
     "react-dom": "^18",
     "react-https-redirect": "^1.1.0",
+    "react-image-lightbox": "^5.1.4",
+    "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.1.2",
     "swiper": "^11.1.4",
     "swr": "^2.2.5",
