--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-image-lightbox": "^5.1.4",
     "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.4",
     "swr": "^2.2.5",
     "yup": "^1.4.0"
